add link to github

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="title">Список Задач</h1>
+            <div class="header__inner">
+                <a href="https://github.com/AmadoMuerte">GitHub</a>
+                <h1 class="title">To-Do List</h1>
+            </div>
         </div>
     </header>
     <div class="container">
         <div class="myTodo">
-            
             <div class="myTodo__inner">
-                
                 <div class="form">
                     <input class="form__input" type="text" placeholder="..." value="">
                     <button class="form__btnAdd">Добавить</button>
